<resources>
    <string name="app_name">SanbotMobile</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>

    <string name="forward_button">Forward</string>
    <string name="backward_button">Backward</string>
    <string name="left_button">Left</string>
    <string name="right_button">Right</string>
    <string name="stop_button">Stop</string>
    <string name="wander">Wandering Mode</string>
    <string name="wander2_button">W.mode stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_control_text">TabControl</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
