<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sp.sanbot.sanbotmobile.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/loginButton"/>

    </LinearLayout>

</RelativeLayout>
